--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
           Tech, em um único lugar
          </p>
    </header>
-   
+
    <nav id="menu"> <!--Backgroundo-color #1A5C38-->
       <a href="#">Home</a>
       <a href="#">Notícias</a>
-      <a href="#">Curiosidades</a>
-      <a href="#">Fale Conosco</a>
+      <a href="#">Contato</a>
    </nav>
 
    <main>
