--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <header> <!-- CORES DO HEADER #1F6D41 (mais escuro), #2B9B5D (média), #39CB79 (mais clara)-->
       <h1 id="tituloprincipal">CURIOSIDADES DE TECNOLOGIA</h1>
       <p id="paragrafoHeader">
-         Tudo aquilo que você sempre quis saber sobre o<br>mundo
+         Tudo aquilo que você sempre quis saber sobre<br> o mundo
           Tech, em um único lugar
          </p>
    </header>
