--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          </p>
 
          <picture>
-            <source media="(max-width: 850px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+            <source media="(max-width: 850px)" srcset="imagens/dan-droids-pq.png" type="image/png" class="source">
             <img src="imagens/dan-droids.png" alt="Androids">
          </picture>
          <p>
@@ -51,7 +51,7 @@
 
          <div id="IrinaBlok">
             <picture>
-               <source media="(max-width: 850px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpeg">
+               <source media="(max-width: 850px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpeg" class="source">
                <img src="imagens/irina-blok.jpg" alt="Foto do rosto de Irina Blok">
             </picture>
          </div>
