--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
             A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="external" class="links">Dan Morrill &#x1F517;</a>. Ele conta que abriu o <a href="https://inkscape.org/" target="_blank" rel="external" class="links">Inkscape &#x1F517;</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
          </p>
 
-         <picture>
-            <source media="(max-width: 850px)" srcset="imagens/dan-droids-pq.png" type="image/png" class="source">
-            <img src="imagens/dan-droids.png" alt="Androids">
-         </picture>
+         <div class="IrinaBlok">
+            <picture>
+               <source media="(max-width: 850px)" srcset="imagens/dan-droids-pq.png" type="image/png" class="source">
+               <img src="imagens/dan-droids.png" alt="Androids">
+            </picture>
+         </div>
          <p>
             Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.
          </p>
@@ -49,7 +51,7 @@
             A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" class="links">Irina Blok &#x1F517;</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
          </p>
 
-         <div id="IrinaBlok">
+         <div class="IrinaBlok">
             <picture>
                <source media="(max-width: 850px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpeg" class="source">
                <img src="imagens/irina-blok.jpg" alt="Foto do rosto de Irina Blok">
