bug de width corrigido

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
          <div class="IrinaBlok">
             <picture>
-               <source media="(max-width: 850px)" srcset="imagens/dan-droids-pq.png" type="image/png" class="source">
-               <img src="imagens/dan-droids.png" alt="Androids">
+               <source media="(max-width: 700px)" srcset="imagens/dan-droids-pq.png" type="image/png" class="IrinaBlok">
+               <img src="imagens/dan-droids.png" alt="Androids" class="IrinaBlok">
             </picture>
          </div>
          <p>
@@ -53,8 +53,8 @@
 
          <div class="IrinaBlok">
             <picture>
-               <source media="(max-width: 850px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpeg" class="source">
-               <img src="imagens/irina-blok.jpg" alt="Foto do rosto de Irina Blok">
+               <source media="(max-width: 700px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpeg" class="source">
+               <img src="imagens/irina-blok.jpg" alt="Foto do rosto de Irina Blok" class="IrinaBlok">
             </picture>
          </div>
          <p>
@@ -110,7 +110,11 @@
       </article>   
    </main>
    <footer>
-      <p>Site criado por <span><a href="https://github.com/AllexRX" target="_blank" rel="external" class="cursoemvideo">Alex</a></span> para o desafio 10 do <span class="cursoemvideo"><a class="cursoemvideo" href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">Curso em Video</a></span>.</p>
+      <address>
+         <p>
+            Site criado por <span><a href="https://github.com/AllexRX" target="_blank" rel="external" class="cursoemvideo">Alex</a></span> para o desafio 10 do <span class="cursoemvideo"><a class="cursoemvideo" href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">Curso em Video</a></span>.
+         </p>
+      </address>
    </footer>
 </body>
 </html>
